--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,68 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+/**** sidemenu styling ****/
+$SIDEMENU_TRANSPARENCY: rgba(255,255,255,0.4);
+// color for the sidemenu
+.sideMenu {
+  p {
+    color: white;
+  }
+  background: map-get($colors, appColor);
+}
+
+.side-menu-item {
+  background:none;
+  border:0px;
+  .item {
+    background: none;
+    color: #f7f6f6;
+    font-size: 14px;
+    font-weight: inherit;
+    &.activeHighlight{
+      background: $SIDEMENU_TRANSPARENCY;
+    }
+  }
+  &.activeHighlight{
+        .item-md{
+            background: $SIDEMENU_TRANSPARENCY;
+        }
+    }
+}
+// shows currently selected page
+.activeHighlight {
+  background: $SIDEMENU_TRANSPARENCY;
+}
+
+.profile-image {
+  background: none;
+  text-align: center;
+  padding-top: 20px;
+  img {
+    width: 40%;
+    height: auto;
+    border-radius: 50%;
+    border: 4px solid $SIDEMENU_TRANSPARENCY;
+    -webkit-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
+  }
+}
+/**** ./sidemenu style ****/
+// http://ionicframework.com/docs/v2/theming/
+
+
+// App Global Sass
+// --------------------------------------------------
+// Put style rules here that you want to apply globally. These
+// styles are for the entire app and not just one component.
+// Additionally, this file can be also used as an entry point
+// to import other Sass files to be included in the output CSS.
+//
+// Shared Sass variables, which can be used to adjust Ionic's
+// default Sass variables, belong in "theme/variables.scss".
+//
+// To declare rules for a specific mode, create a child rule
+// for the .md, .ios, or .wp mode classes. The mode class is
+// automatically applied to the <body> element in the app.
