--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 page-home {
 
   .page-title{
+    text-align: center;
     color: #00a4d3;
   }
 
@@ -12,7 +13,12 @@ page-home {
         display: inline-block;
       }
     }
+  }
 
+    //Menu css
+    .menu-title{
+      color: #00a4d3;
+    }
 
     //css for the ads on top page
     .ads{
@@ -24,6 +30,7 @@ page-home {
         //width: 100%;
         //margin-bottom: 10%;
         //margin-top: -10px;
+    }
 
     .card-title {
       position: absolute;
@@ -50,11 +57,8 @@ page-home {
     //  //position: relative;
     }
 
-    }
 
     //categories css
-
-    .categories {
 
       .category-title{
         margin-top: 20px;
@@ -114,7 +118,8 @@ page-home {
         color: #00a4d3;
       }
 
-    }
-
-  }
+      #map {
+        width: 100%;
+        height: 90%;
+       }
 }
